Run tests with single fork